--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "prismjs": "^1.9.0",
     "prop-types": "^15.6.2",
     "rails-ujs": "^5.2.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-dom": "^16.5.0",
+    "reactstrap": "^6.4.0",
     "scrollmonitor": "^1.2.4",
     "smartwizard": "^4.3.1",
     "smooth-scroll": "^12.1.5",
     "socicon": "^3.0.5",
-    "turbolinks": "^5.1.1",
     "zoom-vanilla.js": "^2.0.5"
   },
   "devDependencies": {
